# message-parser

./: .gitignore  CHANGELOG.md  Cargo.toml  README.MD  README.md  RELEASE.md  docs.md  example.js  index.html  issues.md  spec.md
.github/ISSUE_TEMPLATE/: 1-bug.yaml  config.yaml
.github/workflows/: ci.yml  deploy.yml  smoketest-wasm.yml
benches/: hugetext.txt  lorem_ipsum.txt  moar_links.txt  my_benchmark.rs  r10s_update_message.txt  testdata.md
message_parser_ffi/: Cargo.toml  message_parser.h  readme.md
message_parser_ffi/smoke_test/: main.c
message_parser_ffi/src/: lib.rs
message_parser_wasm/: Cargo.toml  README.md  example.html  example.js
message_parser_wasm/src/: lib.rs  manual_typings.ts
message_parser_wasm/tests/: web.rs
pkg/: LICENSE  README.md  message_parser_wasm.d.ts  message_parser_wasm.js  message_parser_wasm_bg.wasm  message_parser_wasm_bg.wasm.d.ts  package.json
public/: index.html
scripts/: extract_hashtag_content_ranges.py  extract_punct_chars.py  extract_whitespace_ranges.py
src/: lib.rs  main.rs  parser.rs
src/parser/: email.rs  is_emoji.rs  link_url.rs  mod.rs  parse_from_text.rs  unicode_ranges.rs  utils.rs  utils.rs.orig
src/parser/link_url/: ipv4.rs  ipv6.rs  link_url.rs  mod.rs  parenthesis_counter.rs  parse_link.rs  punycode_warning.rs
src/parser/link_url/allowed_tlds/: country_tlds.rs  mod.rs
src/parser/link_url/ip/: ip_literal.rs  ipliteral.rs  ipv4.rs  ipv6.rs  ipvfuture.rs  mod.rs
src/parser/parse_from_text/: base_parsers.rs  desktop_subset.rs  find_range.rs  hashtag_content_char_ranges.rs  link_element.rs  markdown_elements.rs  mod.rs  phone_numbers.rs  text_elements.rs
src/parser/parse_from_text/markdown_elements/: label_elements.rs
tests/: links.rs  mentions.rs  test.rs
tests/based_on_issue/: exclamation_mark_at_end_of_link_81.rs  fediverse_handle_82.rs  mod.rs
tests/emoji/: all_desktop_emojis.txt  mod.rs
tests/text_to_ast/: desktop_set.rs  links.rs  markdown.rs  mod.rs  mod.rs.orig  text_only.rs
