[package]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
name = "deltachat_message_parser"
version = "0.6.0"
edition = "2018"
license = "MPL-2.0"
description = "email, link, hashtag, md and more - parsing for deltachat messages"
repository = "https://github.com/deltachat/message-parser"
keywords = ["markdown", "deltachat-messenger", "deltachat", "dc", "message-parser"]
categories = ["parser-implementations"]

include = [
  "CHANGELOG.md",
  "README.MD",
  "LICENSE",
  "spec.md",
  "src/*",
  "Cargo.toml",
  "message_parser_wasm/Cargo.toml"
]

[dependencies]
nom = "6"
serde = "1.0.126"
serde_derive = "1.0.126"
unic-idna-punycode = "0.9.0"
icu_properties = "1.2.0"
icu_testdata = "1.2.0"

[workspace]
members = ["message_parser_wasm"]


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
path="benches/my_benchmark.rs"
harness = false
